--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="first-section">
-      <div class="header">
+    <div class="first-section" id="first-section">
+      <div class="header" id="header">
+        <div class="site-title" id="site-title--sm">
+          <h1>Kindled</h1>
+          <h1>Kindled</h1>
+          <p class="title--about">
+            story-rich brand design for the modelrn ENTREPRENEUR
+          </p>
+        </div>
         <div class="menu">
-          <a href="#">Home</a>
+          <a href="">Home</a>
           <a href="#">About Us</a>
         </div>
       </div>
@@ -19,7 +26,7 @@
     </div>
     <div class="main-section">
       <div class="grid-section grid">
-        <div class="grid-section-1 row">
+        <div class="grid-section-1 row grid-center">
           <img src="images/img2.png" alt="image" />
         </div>
         <div class="grid-section-2 row">
@@ -95,11 +102,13 @@
       <div class="subscribe row">
         <div class="subscribe-grid grid">
           <div class="site-title">
-            <h1>Kindled</h1>
-            <h1>Kindled</h1>
-            <p class="title--about">
-              story-rich brand design for the modelrn ENTREPRENEUR
-            </p>
+            <a href="#header">
+              <h1>Kindled</h1>
+              <h1>Kindled</h1>
+              <p class="title--about">
+                story-rich brand design for the modelrn ENTREPRENEUR
+              </p>
+            </a>
           </div>
           <div class="email">
             <h4>Download the free resource</h4>
@@ -116,14 +125,27 @@
               <button class="submit--button">submit</button>
             </div>
           </div>
-          <div class="contact"><h4>contact</h4></div>
-          <div class="social"><h4>social</h4></div>
+          <div class="contact">
+            <h4 class="contact-social--title">contact</h4>
+            <ul class="contact-social--list">
+              <li><a href="">Email</a></li>
+              <li><a href="">Inquire</a></li>
+            </ul>
+          </div>
+          <div class="social">
+            <h4 class="contact-social--title">social</h4>
+            <ul class="contact-social--list">
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://www.pinterest.com/">Pinterest</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div class="footer">
-      <div>
-        <p>footer</p>
+      <div class="copyright">
+        <h5><span>©</span> Kindled</h5>
+        <h5>Kindled 2022</h5>
       </div>
     </div>
     <script src="js/script.js"></script>
