--- a/index.html
+++ b/index.html
@@ -99,46 +99,47 @@
           </div>
         </div>
       </div>
-      <div class="subscribe row">
-        <div class="subscribe-grid grid">
-          <div class="site-title">
-            <a href="#header">
-              <h1>Kindled</h1>
-              <h1>Kindled</h1>
-              <p class="title--about">
-                story-rich brand design for the modelrn ENTREPRENEUR
-              </p>
-            </a>
-          </div>
-          <div class="email">
-            <h4>Download the free resource</h4>
-            <p class="download--text">
-              Soul of a storyline: a workbook for ENTREPRENEURs
+      <div class="subscribe row subscribe-grid grid">
+        <div class="site-title">
+          <a href="#header" id="logo">
+            <h1>Kindled</h1>
+            <h1>Kindled</h1>
+            <p class="title--about">
+              story-rich brand design for the modelrn ENTREPRENEUR
             </p>
-            <div class="email--form">
-              <input
-                class="email--input"
-                type="text"
-                placeholder="email"
-                name="email"
-              />
-              <button class="submit--button">submit</button>
-            </div>
+          </a>
+          <a href="#header" id="logo-md">
+            <h1>K</h1>
+          </a>
+        </div>
+        <div class="email">
+          <h4>Download the free resource</h4>
+          <p class="download--text">
+            Soul of a storyline: a workbook for ENTREPRENEURs
+          </p>
+          <div class="email--form">
+            <input
+              class="email--input"
+              type="text"
+              placeholder="email"
+              name="email"
+            />
+            <button class="submit--button">submit</button>
           </div>
-          <div class="contact">
-            <h4 class="contact-social--title">contact</h4>
-            <ul class="contact-social--list">
-              <li><a href="">Email</a></li>
-              <li><a href="">Inquire</a></li>
-            </ul>
-          </div>
-          <div class="social">
-            <h4 class="contact-social--title">social</h4>
-            <ul class="contact-social--list">
-              <li><a href="https://www.instagram.com/">Instagram</a></li>
-              <li><a href="https://www.pinterest.com/">Pinterest</a></li>
-            </ul>
-          </div>
+        </div>
+        <div class="contact">
+          <h4 class="contact-social--title">contact</h4>
+          <ul class="contact-social--list">
+            <li><a href="">Email</a></li>
+            <li><a href="/pages/inquire.html" id="inquire">Inquire</a></li>
+          </ul>
+        </div>
+        <div class="social">
+          <h4 class="contact-social--title">social</h4>
+          <ul class="contact-social--list">
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
+            <li><a href="https://www.pinterest.com/">Pinterest</a></li>
+          </ul>
         </div>
       </div>
     </div>
