Added sliding menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="first-section" id="first-section">
       <div class="header" id="header">
+        <div class="black"></div>
         <div class="site-title" id="site-title--sm">
           <h1>Kindled</h1>
           <h1>Kindled</h1>
@@ -17,12 +18,15 @@
             story-rich brand design for the modelrn ENTREPRENEUR
           </p>
         </div>
-        <div class="menu">
+        <!-- <div class="menu">
           <a href="">Home</a>
           <a href="#">About Us</a>
-        </div>
+        </div> -->
       </div>
-      <div class="black"></div>
+      <div class="menu">
+        <a href="">Home</a>
+        <a href="#">About Us</a>
+      </div>
     </div>
     <div class="main-section">
       <div class="grid-section grid">
@@ -149,6 +153,7 @@
         <h5>Kindled 2022</h5>
       </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
