--- a/pages/inquire.html
+++ b/pages/inquire.html
@@ -116,7 +116,7 @@
       </div>
       <div class="subscribe row subscribe-grid grid">
         <div class="site-title">
-          <a href="#header" id="logo">
+          <a href="/index.html" id="logo">
             <h1>Kindled</h1>
             <h1>Kindled</h1>
             <p class="title--about">
