Bugs are fixed, animated button is added

--- a/index.html
+++ b/index.html
@@ -18,17 +18,33 @@
             story-rich brand design for the modelrn ENTREPRENEUR
           </p>
         </div>
-        <!-- <div class="menu">
-          <a href="">Home</a>
-          <a href="#">About Us</a>
-        </div> -->
       </div>
       <div class="menu">
-        <a href="">Home</a>
-        <a href="#">About Us</a>
+        <div class="menu-flex">
+          <a href="">Projects</a>
+          <a href="#">About Us</a>
+        </div>
       </div>
+      <!-- <div class="start-progect-div">
+        <button class="start-progect--button">start your project</button>
+      </div> -->
     </div>
     <div class="main-section">
+      <div class="button-div">
+        <!-- <div class="flex-center"> -->
+        <a href="pages/inquire.html" class="start-progect--button">
+          start your project
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+        <!-- </div> -->
+      </div>
       <div class="grid-section grid">
         <div class="grid-section-1 row grid-center">
           <img src="images/img2.png" alt="image" />
@@ -105,14 +121,14 @@
       </div>
       <div class="subscribe row subscribe-grid grid">
         <div class="site-title">
-          <a href="#header" id="logo">
+          <a href="#first-section" id="logo">
             <h1>Kindled</h1>
             <h1>Kindled</h1>
             <p class="title--about">
               story-rich brand design for the modelrn ENTREPRENEUR
             </p>
           </a>
-          <a href="#header" id="logo-md">
+          <a href="#first-section" id="logo-md">
             <h1>K</h1>
           </a>
         </div>
