Added adaptability for contact page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="main-section">
       <div class="button-div">
         <!-- <div class="flex-center"> -->
-        <a href="pages/inquire.html" class="start-progect--button">
+        <a href="pages/contact.html" class="start-progect--button">
           start your project
           <span></span>
           <span></span>
@@ -151,7 +151,7 @@
           <h4 class="contact-social--title">contact</h4>
           <ul class="contact-social--list">
             <li><a href="">Email</a></li>
-            <li><a href="/pages/inquire.html" id="inquire">Inquire</a></li>
+            <li><a href="/pages/contact.html" id="inquire">Inquire</a></li>
           </ul>
         </div>
         <div class="social">
