--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/style/style.css" />
-    <link rel="stylesheet" href="/style/style-inquire.css" />
+    <link rel="stylesheet" href="/style/style-contact.css" />
     <title>Kindled</title>
   </head>
   <body>
+    <div class="header" id="header">
+      <div class="black"></div>
+      <div class="site-title" id="site-title--sm">
+        <h1>Kindled</h1>
+        <h1>Kindled</h1>
+        <p class="title--about">
+          story-rich brand design for the modelrn ENTREPRENEUR
+        </p>
+      </div>
+    </div>
     <div class="main-section">
         <div class="content flex-right">
           <h1 class="inquiry-title">DESIGN INQUIRY</h1>
@@ -19,9 +29,11 @@
               <th class="title cellheader"><h2>contact</h2></th>
             </tr>
             <tr class="table-text">
-              <th class="cellheader">
+              <th class="cellheader" colspan="2">
+                <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
                 minus placeat similique quis nihil repellendus.
+                </p>
               </th>
             </tr>
             <tr>
@@ -29,7 +41,7 @@
               <th></th>
             </tr>
             <tr>
-              <th rowspan="3"></th>
+              <th rowspan="3" class="th-empty"></th>
               <th class='input-names'>
                 <input type="text" placeholder="First Name" /><input
                   type="text"
@@ -50,7 +62,7 @@
               <th></th>
             </tr>
             <tr>
-              <th rowspan="7"></th>
+              <th rowspan="7" class="th-empty"></th>
               <th><input type="text" placeholder="Business Name" /></th>
             </tr>
             <tr>
@@ -94,7 +106,7 @@
               <th></th>
             </tr>
             <tr>
-              <th rowspan="2"></th>
+              <th rowspan="2" class="th-empty"></th>
               <th><input
                 type="text"
                 placeholder="How did you hear about K+K?"
@@ -107,7 +119,7 @@
               /></textarea>
             </tr>
             <tr>
-              <th></th>
+              <th class="th-empty"></th>
               <th class="cell-button"><div class="flex-center"><button type="submit">submit application</button></div></th>
             </tr>
           </tbody>
@@ -146,7 +158,7 @@
           <h4 class="contact-social--title">contact</h4>
           <ul class="contact-social--list">
             <li><a href="">Email</a></li>
-            <li><a href="/pages/inquire.html" id="inquire">Inquire</a></li>
+            <li><a href="/pages/contact.html" id="inquire">Inquire</a></li>
           </ul>
         </div>
         <div class="social">
@@ -164,6 +176,7 @@
         <h5>Kindled 2022</h5>
       </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
