Project page is added

--- a/index.html
+++ b/index.html
@@ -11,23 +11,20 @@
     <div class="first-section" id="first-section">
       <div class="header" id="header">
         <div class="black"></div>
-        <div class="site-title" id="site-title--sm">
+        <a href="index.html" class="site-title" id="site-title--sm">
           <h1>Kindled</h1>
           <h1>Kindled</h1>
           <p class="title--about">
             story-rich brand design for the modelrn ENTREPRENEUR
           </p>
-        </div>
+        </a>
       </div>
       <div class="menu">
         <div class="menu-flex">
-          <a href="">Projects</a>
+          <a href="pages/project1.html">Projects</a>
           <a href="#">About Us</a>
         </div>
       </div>
-      <!-- <div class="start-progect-div">
-        <button class="start-progect--button">start your project</button>
-      </div> -->
     </div>
     <div class="main-section">
       <div class="button-div">
@@ -38,20 +35,20 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
         </a>
         <!-- </div> -->
       </div>
       <div class="grid-section grid">
         <div class="grid-section-1 row grid-center">
-          <img src="images/img2.png" alt="image" />
+          <img src="images/main/img2.png" alt="image" />
         </div>
         <div class="grid-section-2 row">
           <div class="grid-inner_image">
-            <img src="images/img4.png" alt="" class="section-2-inner_image" />
+            <img
+              src="images/main/img4.png"
+              alt=""
+              class="section-2-inner_image"
+            />
           </div>
           <div class="grid-inner_content grid">
             <div class="grid-inner_text">
@@ -79,7 +76,7 @@
         </div>
         <div class="row grid-center">
           <div class="sec-3_image">
-            <img src="images/img5.png" alt="image" />
+            <img src="images/main/img5.png" alt="image" />
           </div>
         </div>
         <div class="grid-section-4 row">
@@ -151,7 +148,9 @@
           <h4 class="contact-social--title">contact</h4>
           <ul class="contact-social--list">
             <li><a href="">Email</a></li>
-            <li><a href="/pages/contact.html" id="inquire">Inquire</a></li>
+            <li>
+              <a href="pages/contact.html" id="inquire">Inquire</a>
+            </li>
           </ul>
         </div>
         <div class="social">
