--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <link rel="stylesheet" href="/style/style-contact.css" />
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/style-contact.css" />
     <title>Kindled</title>
   </head>
   <body>
     <div class="header" id="header">
       <div class="black"></div>
-      <div class="site-title" id="site-title--sm">
-        <h1>Kindled</h1>
-        <h1>Kindled</h1>
-        <p class="title--about">
-          story-rich brand design for the modelrn ENTREPRENEUR
-        </p>
-      </div>
+      <a href="../index.html" class="site-title" id="site-title--sm">
+          <h1>Kindled</h1>
+          <h1>Kindled</h1>
+          <p class="title--about">
+          story-rich brand design for the modelrn ENTREPRENEUR</p>
+          </a>
     </div>
     <div class="main-section">
         <div class="content flex-right">
@@ -128,14 +127,14 @@
       </div>
       <div class="subscribe row subscribe-grid grid">
         <div class="site-title">
-          <a href="/index.html" id="logo">
+          <a href="../index.html" id="logo">
             <h1>Kindled</h1>
             <h1>Kindled</h1>
             <p class="title--about">
               story-rich brand design for the modelrn ENTREPRENEUR
             </p>
           </a>
-          <a href="/index.html" id="logo-md">
+          <a href="../index.html" id="logo-md">
             <h1>K</h1>
           </a>
         </div>
@@ -158,7 +157,7 @@
           <h4 class="contact-social--title">contact</h4>
           <ul class="contact-social--list">
             <li><a href="">Email</a></li>
-            <li><a href="/pages/contact.html" id="inquire">Inquire</a></li>
+            <li><a href="../pages/contact.html" id="inquire">Inquire</a></li>
           </ul>
         </div>
         <div class="social">
