New project page is added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
       </div>
       <div class="menu">
         <div class="menu-flex">
-          <a href="pages/project1.html">Projects</a>
+          <div id="projects">
+            <a>Projects </a>
+            <div class="menu-wrapper">
+              <ul>
+                <li>
+                  <a href="pages/project1.html">alex mary</a>
+                </li>
+                <li>
+                  <a href="pages/project2.html">1989</a>
+                </li>
+              </ul>
+            </div>
+          </div>
           <a href="#">About Us</a>
         </div>
       </div>
