--- a/pages/project2.html
+++ b/pages/project2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/style-contact.css" />
     <link rel="stylesheet" href="../style/style-project.css" />
+    <link rel="stylesheet" href="../style/style-project-1989.css" />
     <title>Kindled</title>
   </head>
   <body>
@@ -20,32 +21,54 @@
       </div>
       <div class="main-section grid">
           <div class="slider-section">
-              <img class="slider" src="../images/alex-mary/slideshow1-1.jpg">
+              <img  src="../images/1989/img-1.jpg">
           </div>
           <div class="progect-section row">
-              <h1 class="section-title">Alex Mary</h1>
-              <h3>Photography</h3>
-              <h4>Brand Identity, Print, Packaging</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sapiente eum voluptatem omnis fugiat amet aperiam quis, ea laudantium assumenda beatae illo. Commodi quibusdam praesentium similique, laboriosam sit consectetur beatae!</p>
+              <h1 class="section-title">1989 apparel</h1>
+              <h4>Identity, Copy, Packaging, Wearables, Web</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa minus earum ullam ad dolore tenetur a incidunt soluta ex animi, mollitia dolorem illo nihil impedit cumque rem quo recusandae iste. Quia velit repudiandae voluptatum placeat architecto ipsum, quisquam in necessitatibus ipsam optio molestias! Quo dicta eum alias optio tempore.</p>
           </div>
-          <div class="sec-3_image flex-center">
-              <img src="../images/alex-mary/wedding.jpg">
+          <div class="image-section--md flex-center">
+              <img id="img2" src="../images/1989/img-2.jpg">
           </div>
           <div class="progect-section row">
-            <h2 class="section-title">A brand you&nbsp;can feel</h2>
+            <h2 class="section-title">classics for modern&nbsp;living</h2>
             <h4>Brand Spotlight</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sapiente eum voluptatem omnis fugiat amet aperiam quis, ea laudantium assumenda beatae illo. Commodi quibusdam praesentium similique, laboriosam sit consectetur beatae!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae ab quidem perspiciatis aliquam distinctio doloremque doloribus? Veniam ipsam mollitia illo necessitatibus delectus, aperiam nihil suscipit repellendus officia et reiciendis, at architecto deleniti ad! Libero provident corrupti sed necessitatibus culpa magni dolor. Doloribus vel iure dicta omnis saepe temporibus ab?</p>
          </div>
-         <div class="image-section--md">
-            <img src="../images/alex-mary/model1.jpg">
-         </div>
-         <div class="image-section--md">
-          <img src="../images/alex-mary/model2.jpg">
+    
+         <div class="image-section--lg">
+            <img src="../images/1989/img-3.jpg">
          </div>
 
-         <div class="image-section--lg">
-           <img src="../images/alex-mary/paper1.jpg">
-          </div>
+         <div class="image-section--md tube-section flex-center">
+           <img src="../images/1989/tube-1.png">
+           <img src="../images/1989/tube-2.png">
+           <img src="../images/1989/tube-3.png">
+         </div>
+
+         <div class="site-1989">
+           <div class="site-1989-header">
+             <img src="../images/1989/header.jpg" alt="">
+           </div>
+           <div class="site-1989-main grid">
+             <div class="button-down ">
+               <img src="../images/1989/shop-buttondown.png" alt="">
+             </div>
+             <div class="site-1989-image">
+               <img src="../images/1989/img-4.jpg" alt="">
+             </div>
+             <div class="site-1989-featuring">
+               <img src="../images/1989/shop-featuring.png" alt="">
+             </div>
+             <div class="site-1989-sustainability">
+              <img src="../images/1989/shop-sustainability.png" alt="">
+             </div>
+             <div class="site-1989-essentials">
+              <img src="../images/1989/shop-essential.png" alt="">
+             </div>
+           </div>
+         </div>
 
           <div class="image-section--md row flex-center left">
             <div>
