Progect page is updated, ticker is added

--- a/pages/project2.html
+++ b/pages/project2.html
@@ -12,146 +12,200 @@
   </head>
   <body>
     <div class="header" id="header">
-        <a href="../index.html" class="site-title" id="site-title--sm">
-            <h1>Kindled</h1>
-            <h1>Kindled</h1>
-            <p class="title--about">
-            story-rich brand design for the modelrn ENTREPRENEUR</p>
-            </a>
+      <a href="../index.html" class="site-title" id="site-title--sm">
+        <h1>Kindled</h1>
+        <h1>Kindled</h1>
+        <p class="title--about">
+          story-rich brand design for the modelrn ENTREPRENEUR
+        </p>
+      </a>
+    </div>
+    <div class="main-section grid">
+      <div class="slider-section flex-center">
+        <img
+          class="typography"
+          id="slider-section-1989-logo"
+          src="../images/1989/1989_logo.png"
+        />
+        <img src="../images/1989/img-1.jpg" />
+        <!-- <img id="typography-change" src="../images/1989/taglines.png" /> -->
       </div>
-      <div class="main-section grid">
-          <div class="slider-section">
-              <img  src="../images/1989/img-1.jpg">
-          </div>
-          <div class="progect-section row">
-              <h1 class="section-title">1989 apparel</h1>
-              <h4>Identity, Copy, Packaging, Wearables, Web</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa minus earum ullam ad dolore tenetur a incidunt soluta ex animi, mollitia dolorem illo nihil impedit cumque rem quo recusandae iste. Quia velit repudiandae voluptatum placeat architecto ipsum, quisquam in necessitatibus ipsam optio molestias! Quo dicta eum alias optio tempore.</p>
-          </div>
-          <div class="image-section--md flex-center">
-              <img id="img2" src="../images/1989/img-2.jpg">
-          </div>
-          <div class="progect-section row">
-            <h2 class="section-title">classics for modern&nbsp;living</h2>
-            <h4>Brand Spotlight</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae ab quidem perspiciatis aliquam distinctio doloremque doloribus? Veniam ipsam mollitia illo necessitatibus delectus, aperiam nihil suscipit repellendus officia et reiciendis, at architecto deleniti ad! Libero provident corrupti sed necessitatibus culpa magni dolor. Doloribus vel iure dicta omnis saepe temporibus ab?</p>
-         </div>
-    
-         <div class="image-section--lg">
-            <img src="../images/1989/img-3.jpg">
-         </div>
+      <div class="progect-section row">
+        <h1 class="section-title">1989 apparel</h1>
+        <h4>Identity, Copy, Packaging, Wearables, Web</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa
+          minus earum ullam ad dolore tenetur a incidunt soluta ex animi,
+          mollitia dolorem illo nihil impedit cumque rem quo recusandae iste.
+          Quia velit repudiandae voluptatum placeat architecto ipsum, quisquam
+          in necessitatibus ipsam optio molestias! Quo dicta eum alias optio
+          tempore.
+        </p>
+      </div>
+      <div class="image-section--md flex-center">
+        <img id="img2" src="../images/1989/img-2.jpg" />
+      </div>
+      <div class="progect-section row">
+        <h2 class="section-title">classics for modern&nbsp;living</h2>
+        <h4>Brand Spotlight</h4>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          quae ab quidem perspiciatis aliquam distinctio doloremque doloribus?
+          Veniam ipsam mollitia illo necessitatibus delectus, aperiam nihil
+          suscipit repellendus officia et reiciendis, at architecto deleniti ad!
+          Libero provident corrupti sed necessitatibus culpa magni dolor.
+          Doloribus vel iure dicta omnis saepe temporibus ab?
+        </p>
+      </div>
 
-         <div class="image-section--md tube-section flex-center">
-           <img src="../images/1989/tube-1.png">
-           <img src="../images/1989/tube-2.png">
-           <img src="../images/1989/tube-3.png">
-         </div>
+      <div class="image-section--lg">
+        <img src="../images/1989/img-3.jpg" />
+      </div>
 
-         <div class="site-1989">
-           <div class="site-1989-header">
-             <img src="../images/1989/header.jpg" alt="">
-           </div>
-           <div class="site-1989-main grid">
-             <div class="button-down ">
-               <img src="../images/1989/shop-buttondown.png" alt="">
-             </div>
-             <div class="site-1989-image">
-               <img src="../images/1989/img-4.jpg" alt="">
-             </div>
-             <div class="site-1989-featuring">
-               <img src="../images/1989/shop-featuring.png" alt="">
-             </div>
-             <div class="site-1989-sustainability">
-              <img src="../images/1989/shop-sustainability.png" alt="">
-             </div>
-             <div class="site-1989-essentials">
-              <img src="../images/1989/shop-essential.png" alt="">
-             </div>
-           </div>
-         </div>
+      <div class="image-section--md three-section flex-center">
+        <img src="../images/1989/tube-1.png" />
+        <img src="../images/1989/tube-2.png" />
+        <img src="../images/1989/tube-3.png" />
+      </div>
 
-          <div class="image-section--md row flex-center left">
-            <div>
-              <img src="../images/alex-mary/cover1.jpg">
-            </div>
-          </div>
-          <div class="image-section--md row flex-center right">
-            <div>
-              <img src="../images/alex-mary/cover2.jpg">
-            </div>
-          </div>
-
-         <div class="image-section--lg">
-           <img src="../images/alex-mary/paper2.jpg">
+      <div class="site-1989">
+        <div class="site-1989-header">
+          <img src="../images/1989/header.jpg" alt="" />
         </div>
-        <div class="image-section--lg row magazine">
-          <div class="flex-center">
-            <img id="slider-magazine" src="../images/alex-mary/magazine-1.jpg">
-          </div> 
-       </div>
+        <div class="site-1989-main grid">
+          <div class="button-down">
+            <img src="../images/1989/shop-buttondown.png" alt="" />
+          </div>
+          <div class="site-1989-image">
+            <img src="../images/1989/img-4.jpg" alt="" />
+          </div>
+          <div class="site-1989-featuring">
+            <img src="../images/1989/shop-featuring.png" alt="" />
+          </div>
+          <div class="site-1989-sustainability">
+            <img src="../images/1989/shop-sustainability.png" alt="" />
+          </div>
+          <div class="site-1989-essentials">
+            <img src="../images/1989/shop-essential.png" alt="" />
+          </div>
+        </div>
+      </div>
 
-       <div class="image-section--md">
-        <img src="../images/alex-mary/merch1.jpg">
-       </div>
-       <div class="image-section--md">
-        <img src="../images/alex-mary/merch2.jpg">
-       </div>
+      <div class="image-section--md three-section flex-center">
+        <img src="../images/1989/mobile_websitedesign-1.png" />
+        <img src="../images/1989/mobile_websitedesign-2.png" />
+        <img src="../images/1989/mobile_websitedesign-3.png" />
+      </div>
+
+      <div
+        class="image-section--md three-section three-section--products flex-center"
+      >
+        <img src="../images/1989/box_design.png" />
+        <img id="product-2" src="../images/1989/bottle_label_design.png" />
+        <img id="product-3" src="../images/1989/roller_bottle_design.png" />
+      </div>
+
+      <!-- <div class="site-1989-header">
+          <img src="../images/1989/header-white.jpg" alt="">
+        </div> -->
+      <div class="marquee">
+        <pre>Classic Style for Modern Living.                 We Are 1989.</pre>
+      </div>
+
+      <div class="image-section--lg flex-center typography-section">
+        <img src="../images/1989/img-5.jpg" />
+        <img id="typography" src="../images/1989/unisex_typography.png" />
+      </div>
+
+      <div class="site-1989">
+        <div class="site-1989-header">
+          <img src="../images/1989/header.jpg" alt="" />
+        </div>
+        <div class="site-1989-main grid">
+          <div class="site-1989-bodycream-image flex-center">
+            <img src="../images/1989/tube-1.png" alt="" />
+          </div>
+          <div class="site-1989-bodycream-description">
+            <img src="../images/1989/bodycream-description.png" alt="" />
+          </div>
+          <div class="site-1989-bodycream-details flex-center">
+            <img src="../images/1989/bodycream-ingredient.png" />
+            <img src="../images/1989/bodycream-review.png" />
+          </div>
+          <div class="site-1989-bodycream-image--sm flex-center">
+            <img src="../images/1989/bottle_label_design.png" alt="" />
+          </div>
+          <div class="site-1989-bodycream-image--sm flex-center">
+            <img src="../images/1989/tube-3.png" alt="" />
+          </div>
+          <div class="site-1989-essentials">
+            <img src="../images/1989/clean_wellness_essentials.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="image-section--lg flex-center typography-section">
+        <img src="../images/1989/img-6.jpg" />
+        <div class="typography flex-center">
+          <img id="typography-1989-logo" src="../images/1989/1989_logo.png" />
+          <img id="typography-change" src="../images/1989/taglines.png" />
+        </div>
       </div>
 
       <div class="button-section">
-      <div class="button-div">
-       <a href="../pages/contact.html" class="start-progect--button">
-         start your project
-         <span></span>
-         <span></span>
-         <span></span>
-         <span></span>
-       </a>
-     </div>
-
+        <div class="button-div">
+          <a href="../pages/contact.html" class="start-progect--button">
+            start your project
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+        </div>
       </div>
-      <div class="subscribe row subscribe-grid grid">
-        <div class="site-title">
-          <a href="../index.html" id="logo">
-            <h1>Kindled</h1>
-            <h1>Kindled</h1>
-            <p class="title--about">
-              story-rich brand design for the modelrn ENTREPRENEUR
-            </p>
-          </a>
-          <a href="../index.html" id="logo-md">
-            <h1>K</h1>
-          </a>
-        </div>
-        <div class="email">
-          <h4>Download the free resource</h4>
-          <p class="download--text">
-            Soul of a storyline: a workbook for ENTREPRENEURs
+    </div>
+
+    <div class="subscribe row subscribe-grid grid">
+      <div class="site-title">
+        <a href="../index.html" id="logo">
+          <h1>Kindled</h1>
+          <h1>Kindled</h1>
+          <p class="title--about">
+            story-rich brand design for the modelrn ENTREPRENEUR
           </p>
-          <div class="email--form">
-            <input
-              class="email--input"
-              type="text"
-              placeholder="email"
-              name="email"
-            />
-            <button class="submit--button">submit</button>
-          </div>
+        </a>
+        <a href="../index.html" id="logo-md">
+          <h1>K</h1>
+        </a>
+      </div>
+      <div class="email">
+        <h4>Download the free resource</h4>
+        <p class="download--text">
+          Soul of a storyline: a workbook for ENTREPRENEURs
+        </p>
+        <div class="email--form">
+          <input
+            class="email--input"
+            type="text"
+            placeholder="email"
+            name="email"
+          />
+          <button class="submit--button">submit</button>
         </div>
-        <div class="contact">
-          <h4 class="contact-social--title">contact</h4>
-          <ul class="contact-social--list">
-            <li><a href="">Email</a></li>
-            <li><a href="../pages/contact.html" id="inquire">Inquire</a></li>
-          </ul>
-        </div>
-        <div class="social">
-          <h4 class="contact-social--title">social</h4>
-          <ul class="contact-social--list">
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            <li><a href="https://www.pinterest.com/">Pinterest</a></li>
-          </ul>
-        </div>
+      </div>
+      <div class="contact">
+        <h4 class="contact-social--title">contact</h4>
+        <ul class="contact-social--list">
+          <li><a href="">Email</a></li>
+          <li><a href="../pages/contact.html" id="inquire">Inquire</a></li>
+        </ul>
+      </div>
+      <div class="social">
+        <h4 class="contact-social--title">social</h4>
+        <ul class="contact-social--list">
+          <li><a href="https://www.instagram.com/">Instagram</a></li>
+          <li><a href="https://www.pinterest.com/">Pinterest</a></li>
+        </ul>
       </div>
     </div>
     <div class="footer">
