Adaptive design for project page is added

--- a/pages/project2.html
+++ b/pages/project2.html
@@ -138,7 +138,7 @@
           <div class="site-1989-bodycream-image--sm flex-center">
             <img src="../images/1989/tube-3.png" alt="" />
           </div>
-          <div class="site-1989-essentials">
+          <div class="site-1989-bodycream-essentials">
             <img src="../images/1989/clean_wellness_essentials.png" alt="" />
           </div>
         </div>
