--- a/pages/project2.html
+++ b/pages/project2.html
@@ -90,6 +90,9 @@
           </div>
         </div>
       </div>
+      <div class="site-1989--sm">
+        <img src="../images/1989/shop-page-mobile.jpg" alt="" />
+      </div>
 
       <div class="image-section--md three-section flex-center">
         <img src="../images/1989/mobile_websitedesign-1.png" />
@@ -142,6 +145,9 @@
             <img src="../images/1989/clean_wellness_essentials.png" alt="" />
           </div>
         </div>
+      </div>
+      <div class="site-1989--sm">
+        <img src="../images/1989/bodycream-shop-page-mobile.jpg" alt="" />
       </div>
 
       <div class="image-section--lg flex-center typography-section">
